# AI_Spec-Driven_Online_Hackathon_1

./: .gitignore  .npmignore  404.html  CLAUDE.md  README.md  deploy.sh  index.html  run_tests.py  sitemap.xml
.claude/: settings.local.json  settings.local.json.tmp.546.1765550605863
.claude/agents/: content-architect.md  tech-writer.md
.github/workflows/: deploy-docs.yml  github-pages.yml
.specify/memory/: constitution.md
assets/css/: styles.22fc1dfb.css  styles.3cd2fd36.css  styles.75dcca1b.css  styles.bc22ccf8.css  styles.c2700b67.css  styles.c976cbb5.css  styles.da2a7912.css  styles.ed619799.css  styles.f23bf98a.css
assets/js/: 0058b4c6.64d22727.js  0058b4c6.8882d36c.js  0058b4c6.c4263c5c.js  0e384e19.fa2256a1.js  17896441.90c0f36e.js  191.15e517a9.js  191.5934faf5.js  191.641806de.js  191.e91456e0.js  (+70 more)
auth/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json
backend/: config.py  main.py  pyproject.toml  requirements.txt
backend/agents/: personalize_agent.py  rag_agent.py  system_prompt.py
backend/api/: auth_helper.py  middleware.py  personalize.py  personalize_models.py  rate_limiter.py  routes_chat.py  security_logger.py  validation.py
backend/db/: models.py  postgres_client.py  profile_queries.py
backend/scripts/: chunker.py  embedder.py  ingest_content.py  migrate_db.py
backend/vector/: qdrant_client.py
book-write/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
book_write/: package.json
docs/: index.html
profile/: index.html
specs/: textbook-main-spec.md
(+277 files in other folders)
